common/gnome-shell/3.18/gnome-shell-dark.css
/* ... */
  .message-secondary-bin {
    color: rgba(211, 218, 227, 0.4); }
    .message-secondary-bin:ltr {
      padding-left: 8px; }
    .message-secondary-bin:rtl {
      padding-right: 8px; }
  .message-secondary-bin > StIcon {
    icon-size: 16px; }
  .message-title {
    font-weight: bold;
    font-size: 1em;
    padding: 2px 0 2px 0; }
  .message-content {
    padding: 8px;
    font-size: 1em; }

.ripple-box {
  width: 52px;
  height: 52px;
  background-image: url("common-assets/misc/corner-ripple-ltr.svg");
  background-size: contain; }
  .ripple-box:rtl {
    background-image: url("common-assets/misc/corner-ripple-rtl.svg"); }

.popup-menu-arrow {
  width: 16px;
  height: 16px; }

.popup-menu-icon {
  icon-size: 16px; }

.window-close {
  background-image: url("common-assets/misc/close.svg");
  background-size: 26px;
  height: 26px;
  width: 26px; }
  .window-close:hover {
    background-image: url("common-assets/misc/close-hover.svg");
    background-size: 26px;
    height: 26px;
    width: 26px; }
  .window-close:active {
    background-image: url("common-assets/misc/close-active.svg");
    background-size: 26px;
    height: 26px;
    width: 26px; }

.window-close {
  -shell-close-overlap: 11px; }

.nm-dialog {
  max-height: 500px;
  min-height: 450px;
  min-width: 470px; }
  .nm-dialog-content {
    spacing: 20px; }
  .nm-dialog-header-hbox {
    spacing: 10px; }
  .nm-dialog-airplane-box {
    spacing: 12px; }
  .nm-dialog-airplane-headline {
    font-size: 1.1em;
    font-weight: bold;
    text-align: center; }
  .nm-dialog-airplane-text {
    color: #D3DAE3; }
  .nm-dialog-header-icon {
    icon-size: 32px; }
  .nm-dialog-scroll-view {
    border: 1px solid #2b2e39;
    border-radius: 2px;
    background-color: #404552; }
  .nm-dialog-header {
    font-weight: bold;
    font-size: 1.2em; }
  .nm-dialog-item {
    font-size: 1em;
    border-bottom: 0px solid;
    padding: 12px;
    spacing: 0px; }
    .nm-dialog-item:selected {
      background-color: #5294E2;
      color: #ffffff; }
  .nm-dialog-icons {
    spacing: .5em; }
  .nm-dialog-icon {
    icon-size: 16px; }

.no-networks-label {
  color: rgba(211, 218, 227, 0.45); }

.no-networks-box {
  spacing: 12px; }

#overview {
  spacing: 24px; }

.overview-controls {
  padding-bottom: 32px; }

.window-picker {
  -horizontal-spacing: 32px;
  -vertical-spacing: 32px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 48px; }
  .window-picker.external-monitor {
    padding: 32px; }

.window-clone-border {
  border: 3px solid rgba(82, 148, 226, 0.8);
  border-radius: 4px;
  box-shadow: inset 0px 0px 0px 1px rgba(82, 148, 226, 0); }

.window-caption, .window-caption:hover {
  spacing: 25px;
  color: #BAC3CF;
  background-color: rgba(0, 0, 0, 0.7);
  border-radius: 2px;
  padding: 4px 12px;
  -shell-caption-spacing: 12px; }

.search-entry {
  width: 320px;
  padding: 7px 9px;
  border-radius: 20px;
  border: 1px solid rgba(0, 0, 0, 0.25);
  background-color: rgba(64, 69, 82, 0.9); }
  .search-entry:focus {
    padding: 7px 9px; }
  .search-entry .search-entry-icon {
    icon-size: 16px;
    padding: 0 4px;
    color: #D3DAE3; }
  .search-entry:hover, .search-entry:focus {
    color: #ffffff;
    caret-color: #ffffff;
    background-color: #5294E2;
    selection-background-color: #ffffff;
    selected-color: #5294E2; }
    .search-entry:hover .search-entry-icon, .search-entry:focus .search-entry-icon {
      color: #ffffff; }

#searchResultsBin {
  max-width: 1000px; }

#searchResultsContent {
  padding-left: 20px;
  padding-right: 20px;
  spacing: 16px; }

.search-section {
  spacing: 16px; }

.search-section-content {
  spacing: 32px; }

.list-search-results {
  spacing: 3px; }

.search-section-separator {
  background-color: rgba(255, 255, 255, 0.2);
  -margin-horizontal: 1.5em;
  height: 1px; }

.list-search-result-content {
  spacing: 12px;
  padding: 12px; }

.list-search-result-title {
  font-size: 1.5em;
  color: #ffffff; }

.list-search-result-description {
  color: #cccccc; }

.search-provider-icon {
  padding: 15px; }

.search-provider-icon-more {
  width: 16px;
  height: 16px;
  background-image: url("common-assets/misc/more-results.svg"); }

#dash {
  font-size: 1em;
  color: #BAC3CF;
  background-color: rgba(53, 57, 69, 0.95);
  border-color: rgba(0, 0, 0, 0.4);
  border-width: 1px;
  padding: 6px 1px 6px 0px;
  border-radius: 0 3px 3px 0; }
  #dash:rtl {
    border-radius: 3px 0 0 3px; }
  .right #dash, #dash:rtl {
    padding: 6px 0px 6px 1px; }
  .bottom #dash {
    padding: 1px 6px 0px 6px; }
  .top #dash {
    padding: 0px 6px 1px 6px; }
  #dash .placeholder {
    background-image: url("common-assets/dash/dash-placeholder.svg");
    background-size: contain;
    height: 24px; }
  #dash .empty-dash-drop-target {
    width: 24px;
    height: 24px; }

.dash-item-container > StWidget {
  padding: 0px 4px 0px 5px; }
  .right .dash-item-container > StWidget, .dash-item-container > StWidget:rtl {
    padding: 0px 5px 0px 4px; }
  .bottom .dash-item-container > StWidget {
    padding: 4px 0px 5px 0px; }
  .top .dash-item-container > StWidget {
    padding: 5px 0px 4px 0px; }

.dash-label {
  font-weight: bold;
  border-radius: 3px;
  padding: 4px 12px;
  color: #ffffff;
  background-color: rgba(0, 0, 0, 0.7);
  text-align: center;
  -x-offset: 3px; }
  .bottom .dash-label, .top .dash-label {
    -y-offset: 3px;
    -x-offset: 0; }

#dash .app-well-app .overview-icon,
.right #dash .app-well-app .overview-icon,
.bottom #dash .app-well-app .overview-icon,
.top #dash .app-well-app .overview-icon {
  padding: 10px; }

#dash .app-well-app:hover .overview-icon,
.right #dash .app-well-app:hover .overview-icon,
.bottom #dash .app-well-app:hover .overview-icon,
.top #dash .app-well-app:hover .overview-icon {
  background-color: #5294E2; }
/* ... */

